openshift/api-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api-service
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: api-app
  sessionAffinity: None
status:
  loadBalancer: {}
