openshift/jh-api-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: jh-api-route
spec:
  to:
    kind: Service
    name: api-service
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
